# small-pir

./: Cargo.toml  README.md  bench.sh  bench_1gb.sh
.cargo/: config.toml
benches/: lwe.rs  mul_accum.rs  pir.rs
src/: field.rs  lib.rs  lwe.rs  math.rs  morph.rs  pir.rs  poly.rs  timer.rs
src/pir/: backend.rs  query.rs
src/poly/: residue_ntt.rs
tools/: params.py
