[package]
name = "small-pir"
version = "0.1.0"
edition = "2021"
rust-version = "1.89.0"

[dependencies]
rand_chacha = "0.3"
bitvec = "1.0"
concrete-ntt = "0.2"
delegate = "0.13"
funty = "2.0"
num-integer = "0.1"
rand = "0.8"
rand_distr = "0.4"

[dev-dependencies]
criterion = "0.5.1"
proptest = "1.5"

[[bench]]
name = "mul_accum"
harness = false

[[bench]]
name = "lwe"
harness = false
